shameful min-height values to prevent spotlight flickering

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -767,9 +767,7 @@ http://flickity.metafizzy.co
     /* Hide the lens by default */
     display: none;
     /* Place the lens on top of other elements */
-    z-index: 100;
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0); }
+    z-index: 100; }
   .magnify .magnify-lens.loading {
     background: #333 !important;
     opacity: .75; }
@@ -1315,9 +1313,7 @@ img {
   max-height: 0;
   opacity: 0;
   overflow: hidden;
-  z-index: 103;
-  -webkit-transform: translateZ(0);
-          transform: translateZ(0);
+  z-index: 4;
   background-color: rgba(0, 0, 0, 0.9); }
   @media (max-width: 768px) {
     .subnav-main.active {
@@ -1395,7 +1391,7 @@ img {
       -webkit-flex-basis: 50%;
           -ms-flex-preferred-size: 50%;
               flex-basis: 50%; } }
-  @media (min-width: 768px) {
+  @media (min-width: 960px) {
     .subnav-item {
       -webkit-flex-basis: calc( 100% / 3);
           -ms-flex-preferred-size: calc( 100% / 3);
@@ -1589,11 +1585,11 @@ img {
   opacity: 1; }
 
 .thumb {
-  padding-top: 2.2rem;
-  width: 75%; }
+  padding: 2.2rem 1.54rem 0;
+  width: 100%; }
   @media (min-width: 560px) {
     .thumb {
-      width: 40%; } }
+      width: 50%; } }
   @media (min-width: 960px) {
     .thumb {
       width: 25%; } }
@@ -2355,7 +2351,7 @@ img {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  z-index: 99;
+  z-index: 4;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
   padding: 0 2.2rem 2.2rem 2.2rem; }
@@ -2411,7 +2407,8 @@ img {
 
 .spotlight {
   background-color: #000000;
-  text-align: center; }
+  text-align: center;
+  padding-bottom: 1.54rem; }
 
 .spotlight-title {
   color: #FFFFFF;
@@ -2463,12 +2460,24 @@ img {
     height: auto;
     color: #999999; }
 
-@media (min-width: 960px) {
-  .spotlight-wrap {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex; } }
+.spotlight-wrap {
+  min-height: 320px; }
+  @media (min-width: 560px) {
+    .spotlight-wrap {
+      min-height: 420px; } }
+  @media (min-width: 768px) {
+    .spotlight-wrap {
+      min-height: 530px; } }
+  @media (min-width: 960px) {
+    .spotlight-wrap {
+      min-height: 480px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex; } }
+  @media (min-width: 1152px) {
+    .spotlight-wrap {
+      min-height: 600px; } }
 
 @media (min-width: 960px) {
   .spotlight-header.-small {
